// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering snapshots should render valid snapshot 1`] = `
<div
  className="current-characters-table"
>
  <Styled(ReactTable)
    className="-striped"
    columns={
      Array [
        Object {
          "15": 20,
          "5": 10,
        },
      ]
    }
    data={
      Array [
        Object {
          "characterId": 1,
        },
        Object {
          "characterId": 2,
        },
      ]
    }
    data-spec="character-react-table"
    defaultPageSize={10}
    defaultSorted={
      Array [
        Object {
          "desc": true,
          "id": "characterName",
        },
      ]
    }
    noDataText="Loading..."
  />
</div>
`;

exports[`rendering snapshots should render valid snapshot when loading icon not visible 1`] = `
<div
  className="current-characters-table"
>
  <Styled(ReactTable)
    className="-striped"
    columns={
      Array [
        Object {
          "15": 20,
          "5": 10,
        },
      ]
    }
    data={
      Array [
        Object {
          "characterId": 1,
        },
        Object {
          "characterId": 2,
        },
      ]
    }
    data-spec="character-react-table"
    defaultPageSize={10}
    defaultSorted={
      Array [
        Object {
          "desc": true,
          "id": "characterName",
        },
      ]
    }
    noDataText="No Characters Found"
  />
</div>
`;
